--- a/index.html
+++ b/index.html
@@ -1,79 +1,99 @@
 <!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Portafolio.la : Ejercicio de maquetación de un Portafolio.">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Portafolio.la</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jpcpamies/Portafolio.la">View on GitHub</a>
-
-          <h1 id="project_title">Portafolio.la</h1>
-          <h2 id="project_tagline">Ejercicio de maquetación de un Portafolio.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jpcpamies/Portafolio.la/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jpcpamies/Portafolio.la/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Portafolio.la maintained by <a href="https://github.com/jpcpamies">jpcpamies</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Porfolio.la</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="static/css/normalize.css">
+	<link rel="stylesheet" href="static/css/estilos.css">
+</head>
+<body>
+	<header id="yo" class="Header">
+		<nav class="MainMenu">
+			<ul class="MainMenu-list">
+				<li class="MainMenu-item">
+					<a class="MainMenu-link" href="#yo">Yo</a>
+				</li>
+				<li class="MainMenu-item">
+					<a class="MainMenu-link" href="#perfil">Perfil</a>
+				</li>
+				<li class="MainMenu-item">
+					<a class="MainMenu-link" href="#trabajo">Trabajo</a>
+				</li>
+				<li class="MainMenu-item">
+					<a class="MainMenu-link" href="#contacto">Contacto</a>
+				</li>
+			</ul>
+		</nav>
+		<figure class="Header-imageContainer">
+			<img class="Header-image" src="static/images/avatar.jpg" alt="Imagen personal"  />
+			<figcaption class="Header-imageDescription"><a class="Header-link" href="http://twitter.com/jpcpamies" target='blank'>@jpcpamies</a></figcaption>
+		</figure>
+		<p class="Header-name">Jordi Pàmies</p>
+	</header>
+	<section id="pefil" class="Profile">
+		<h2 class="Profile-title u-title">Mi Perfil</h2>
+		<p class="Profile-description">
+			Hola! si llegaste hasta aquí puedes ver mi portafolio y contratarme. 
+		</p>
+		<a class="Profile-link" href="http://twitter.com/jpcpamies" target='blank'>@jpcpamies</a>
+		<a class="Profile-link" href="http://facebook.com/jpcpamies" target='blank'>jpcpamies</a>
+		<a class="Profile-link" href="http://github.com/jpcpamies" target='blank'>jpcpamies</a>
+	</section>
+	<section id="trabajo" class="Work">
+		<h2 class="Work-title u-title">Mi Trabajo</h2>
+		<article class="Work-item">
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
+		</article>
+		<article class="Work-item">
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
+		</article>
+		<article class="Work-item">
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
+		</article>
+		<article class="Work-item">
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
+		</article>
+		<article class="Work-item">
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
+		</article>
+	</section>
+	<footer id="contacto" class="Footer">
+		<div class="Footer-left">
+			<h3 class="Footer-title">Contacto</h3>
+			<p class="Footer-description">Si tienes una sigerencia o quieres trabajar conmigo ponte en contacto con este formulario.</p>
+		</div>
+		<form class="Footer-form">
+			<input class="Footer-fromInput" type="text" placeholder="Nombre"/>
+			<input class="Footer-fromInput" type="email" placeholder="Email"/>
+			<textarea class="Footer-textarea" placeholder="Motivo"></textarea>
+			<button class="Footer-button" type="submit">Contactarme</button>
+		</form>
+	</footer>
+</body>
 </html>
